--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.jspx
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021  AO Industries, Inc.
-	support@aoindustries.com
-	7262 Bull Pen Cir
-	Mobile, AL 36695
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022  AO Industries, Inc.
+    support@aoindustries.com
+    7262 Bull Pen Cir
+    Mobile, AL 36695
 
 This file is part of semanticcms-theme-documentation.
 
@@ -26,56 +26,56 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
 Creates the frameset for a page, passing to the view.
 
 Arguments:
-	arg.page  The page that should be displayed.
+  arg.page  The page that should be displayed.
 -->
 <jsp:root
-	xmlns:ao="https://oss.aoapps.com/taglib/"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:core="https://semanticcms.com/core/taglib/"
-	xmlns:encoding="https://oss.aoapps.com/encoding/taglib/"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:wr="https://oss.aoapps.com/web-resources/taglib/"
-	version="2.1"
+  xmlns:ao="https://oss.aoapps.com/taglib/"
+  xmlns:c="http://java.sun.com/jsp/jstl/core"
+  xmlns:core="https://semanticcms.com/core/taglib/"
+  xmlns:encoding="https://oss.aoapps.com/encoding/taglib/"
+  xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+  xmlns:jsp="http://java.sun.com/JSP/Page"
+  xmlns:wr="https://oss.aoapps.com/web-resources/taglib/"
+  version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" />
-	<jsp:directive.page session="false" />
-	<c:set var="pageRef" value="${arg.page.pageRef}" />
-	<c:set var="book" value="${applicationScope.semanticCMS.rootBook}" />
-	<ao:html doctype="FRAMESET"><!-- HTML5 does not support framesets -->
-		<head>
-			<c:choose>
-				<c:when test="${encoding:getDoctype() == 'HTML5'}">
-					<ao:meta charset="${pageContext.response.characterEncoding}" />
-				</c:when>
-				<c:otherwise>
-					<ao:meta httpEquiv="content-type" content="${pageContext.response.contentType}" />
-					<ao:meta httpEquiv="content-style-type" content="text/css" />
-					<ao:meta httpEquiv="content-script-type" content="text/javascript" />
-				</c:otherwise>
-			</c:choose>
-			<!-- Mobile support -->
-			<ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
-			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
-			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
-			<!-- Authors -->
-			<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${book.copyright}" />
-			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
-			<title><!--Frames - --><ao:out value="${book.title}" /></title>
-			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
-			<!-- ao-web-resources -->
-			<wr:renderStyles registered="false" activate="semanticcms-theme-documentation-style/frameset" />
-			<!-- No search index framesets -->
-			<ao:meta name="robots" content="noindex, nofollow" />
-		</head>
-		<frameset cols="${fn:escapeXml(book.param.navigationFrameWidth)},*">
-			<c:set var="navigationSrc" value="${pageContext.request.contextPath}${pageRef}?navigation=true" />
-			<frame id="navigationFrame" name="navigationFrame" src="${fn:escapeXml(ao:encodeURL(navigationSrc))}" />
-			<c:set var="contentSrc" value="${pageContext.request.contextPath}${pageRef}" />
-			<c:if test="${!empty param.view}">
-				<c:set var="contentSrc" value="${contentSrc}?view=${ao:encodeURIComponent(param.view)}" />
-			</c:if>
-			<frame id="contentFrame" name="contentFrame" src="${fn:escapeXml(ao:encodeURL(contentSrc))}" />
-		</frameset>
-	</ao:html>
+  <jsp:directive.page language="java" pageEncoding="UTF-8" />
+  <jsp:directive.page session="false" />
+  <c:set var="pageRef" value="${arg.page.pageRef}" />
+  <c:set var="book" value="${applicationScope.semanticCMS.rootBook}" />
+  <ao:html doctype="FRAMESET"><!-- HTML5 does not support framesets -->
+    <head>
+      <c:choose>
+        <c:when test="${encoding:getDoctype() == 'HTML5'}">
+          <ao:meta charset="${pageContext.response.characterEncoding}" />
+        </c:when>
+        <c:otherwise>
+          <ao:meta httpEquiv="content-type" content="${pageContext.response.contentType}" />
+          <ao:meta httpEquiv="content-style-type" content="text/css" />
+          <ao:meta httpEquiv="content-script-type" content="text/javascript" />
+        </c:otherwise>
+      </c:choose>
+      <!-- Mobile support -->
+      <ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <ao:meta name="apple-mobile-web-app-capable" content="yes" />
+      <ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
+      <!-- Authors -->
+      <ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${book.copyright}" />
+      <ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
+      <title><!--Frames - --><ao:out value="${book.title}" /></title>
+      <!-- TODO: Review HTML 4/HTML 5 differences from here -->
+      <!-- ao-web-resources -->
+      <wr:renderStyles registered="false" activate="semanticcms-theme-documentation-style/frameset" />
+      <!-- No search index framesets -->
+      <ao:meta name="robots" content="noindex, nofollow" />
+    </head>
+    <frameset cols="${fn:escapeXml(book.param.navigationFrameWidth)},*">
+      <c:set var="navigationSrc" value="${pageContext.request.contextPath}${pageRef}?navigation=true" />
+      <frame id="navigationFrame" name="navigationFrame" src="${fn:escapeXml(ao:encodeURL(navigationSrc))}" />
+      <c:set var="contentSrc" value="${pageContext.request.contextPath}${pageRef}" />
+      <c:if test="${!empty param.view}">
+        <c:set var="contentSrc" value="${contentSrc}?view=${ao:encodeURIComponent(param.view)}" />
+      </c:if>
+      <frame id="contentFrame" name="contentFrame" src="${fn:escapeXml(ao:encodeURL(contentSrc))}" />
+    </frameset>
+  </ao:html>
 </jsp:root>
