--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.jspx
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021  AO Industries, Inc.
-	support@aoindustries.com
-	7262 Bull Pen Cir
-	Mobile, AL 36695
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022  AO Industries, Inc.
+    support@aoindustries.com
+    7262 Bull Pen Cir
+    Mobile, AL 36695
 
 This file is part of semanticcms-theme-documentation.
 
@@ -26,98 +26,98 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
 A theme designed for technical documentation.
 
 Arguments:
-	arg.view  The current view that should be displayed.
-	arg.page  The page that should be displayed.
+  arg.view  The current view that should be displayed.
+  arg.page  The page that should be displayed.
 -->
 <jsp:root
-	xmlns:ao="https://oss.aoapps.com/taglib/"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:core="https://semanticcms.com/core/taglib/"
-	xmlns:encoding="https://oss.aoapps.com/encoding/taglib/"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:wr="https://oss.aoapps.com/web-resources/taglib/"
-	version="2.1"
+  xmlns:ao="https://oss.aoapps.com/taglib/"
+  xmlns:c="http://java.sun.com/jsp/jstl/core"
+  xmlns:core="https://semanticcms.com/core/taglib/"
+  xmlns:encoding="https://oss.aoapps.com/encoding/taglib/"
+  xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+  xmlns:jsp="http://java.sun.com/JSP/Page"
+  xmlns:wr="https://oss.aoapps.com/web-resources/taglib/"
+  version="2.1"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" />
-	<jsp:directive.page session="false" />
-	<c:set var="page" value="${arg.page}" />
+  <jsp:directive.page language="java" pageEncoding="UTF-8" />
+  <jsp:directive.page session="false" />
+  <c:set var="page" value="${arg.page}" />
 
-	<!-- Display the current view and page -->
-	<ao:html>
-		<c:set var="view" value="${arg.view}" />
-		<c:set var="pageRef" value="${page.pageRef}" />
-		<head>
-			<c:choose>
-				<c:when test="${encoding:getDoctype() == 'HTML5'}">
-					<ao:meta charset="${pageContext.response.characterEncoding}" />
-				</c:when>
-				<c:otherwise>
-					<ao:meta httpEquiv="content-type" content="${pageContext.response.contentType}" />
-					<ao:meta httpEquiv="content-style-type" content="text/css" />
-					<ao:meta httpEquiv="content-script-type" content="text/javascript" />
-				</c:otherwise>
-			</c:choose>
-			<core:doComponents view="${view}" page="${page}" position="HEAD_START" />
-			<!-- Mobile support -->
-			<ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
-			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
-			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
-			<!-- Authors -->
-			<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${core:getViewCopyright(view, page)}" />
-			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${core:getViewAuthors(view, page)}" />
-			<title><ao:out value="${core:getViewTitle(view, page)}" /></title>
-			<c:set var="description" value="${fn:trim(view.getDescription(page))}" />
-			<c:if test="${!empty description}">
-				<ao:meta name="description" content="${description}" />
-			</c:if>
-			<c:set var="keywords" value="${fn:trim(view.getKeywords(page))}" />
-			<c:if test="${!empty keywords}">
-				<ao:meta name="keywords" content="${keywords}" />
-			</c:if>
-			<!-- TODO: Review HTML 4/HTML 5 differences from here -->
-			<!-- ao-web-resources -->
-			<wr:renderStyles activate="ao-style, semanticcms-theme-documentation-style" />
-			<!-- Per-view links -->
-			<c:forEach var="link" items="${core:getViewLinks(view, page)}">
-				<ao:link link="${link}" />
-			</c:forEach>
-			<!-- Application-wide scripts merged with view-specific scripts -->
-			<c:forEach var="script" items="${core:mergeGlobalAndViewScripts(view)}">
-				<ao:script src="${script.value}" />
-				<!-- TODO: Return a Script object type instead, with a follow-up of "jQuery.noConflict();" -->
-				<c:if test="${script.key == 'jquery'}">
-					<ao:script>jQuery.noConflict();</ao:script>
-				</c:if>
-			</c:forEach>
-			<!-- Application-wide head includes -->
-			<c:forEach var="headInclude" items="${applicationScope.htmlRenderer.headIncludes}">
-				<ao:include page="${headInclude}" />
-			</c:forEach>
-			<ao:include page="update-nav.inc.jspx" arg.page="${page}" />
-			<c:if test="${!core:getViewAllowRobots(view, page)}">
-				<ao:meta name="robots" content="noindex, nofollow" />
-			</c:if>
-			<core:doComponents view="${view}" page="${page}" position="HEAD_END" reverse="true" />
-		</head>
-		<body>
-			<core:doComponents view="${view}" page="${page}" position="BODY_START" />
-			<div id="semanticcms-theme-documentation-page-container">
-				<ao:include
-					page="page-top-area.inc.jspx"
-					arg.book="${pageRef.book}"
-					arg.path="${pageRef.path}"
-					arg.view="${view.isDefault() ? pageRef.path : pageRef.path.concat('?view=').concat(ao:encodeURIComponent(view.name))}"
-					arg.page="${page}"
-					arg.active="${view.name}"
-				/>
-				<main>
-					<ao:include page="/semanticcms-pagegraph/pagegraph.inc.jsp" arg.page="${page}" arg.view="${view}" />
-					<core:doView view="${view}" page="${page}" />
-					<div id="semanticcms-theme-documentation-page-pad-bottom"><!-- Avoid self-closing tag in jspx --></div>
-				</main>
-			</div>
-			<core:doComponents view="${view}" page="${page}" position="BODY_END" reverse="true" />
-		</body>
-	</ao:html>
+  <!-- Display the current view and page -->
+  <ao:html>
+    <c:set var="view" value="${arg.view}" />
+    <c:set var="pageRef" value="${page.pageRef}" />
+    <head>
+      <c:choose>
+        <c:when test="${encoding:getDoctype() == 'HTML5'}">
+          <ao:meta charset="${pageContext.response.characterEncoding}" />
+        </c:when>
+        <c:otherwise>
+          <ao:meta httpEquiv="content-type" content="${pageContext.response.contentType}" />
+          <ao:meta httpEquiv="content-style-type" content="text/css" />
+          <ao:meta httpEquiv="content-script-type" content="text/javascript" />
+        </c:otherwise>
+      </c:choose>
+      <core:doComponents view="${view}" page="${page}" position="HEAD_START" />
+      <!-- Mobile support -->
+      <ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <ao:meta name="apple-mobile-web-app-capable" content="yes" />
+      <ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
+      <!-- Authors -->
+      <ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${core:getViewCopyright(view, page)}" />
+      <ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${core:getViewAuthors(view, page)}" />
+      <title><ao:out value="${core:getViewTitle(view, page)}" /></title>
+      <c:set var="description" value="${fn:trim(view.getDescription(page))}" />
+      <c:if test="${!empty description}">
+        <ao:meta name="description" content="${description}" />
+      </c:if>
+      <c:set var="keywords" value="${fn:trim(view.getKeywords(page))}" />
+      <c:if test="${!empty keywords}">
+        <ao:meta name="keywords" content="${keywords}" />
+      </c:if>
+      <!-- TODO: Review HTML 4/HTML 5 differences from here -->
+      <!-- ao-web-resources -->
+      <wr:renderStyles activate="ao-style, semanticcms-theme-documentation-style" />
+      <!-- Per-view links -->
+      <c:forEach var="link" items="${core:getViewLinks(view, page)}">
+        <ao:link link="${link}" />
+      </c:forEach>
+      <!-- Application-wide scripts merged with view-specific scripts -->
+      <c:forEach var="script" items="${core:mergeGlobalAndViewScripts(view)}">
+        <ao:script src="${script.value}" />
+        <!-- TODO: Return a Script object type instead, with a follow-up of "jQuery.noConflict();" -->
+        <c:if test="${script.key == 'jquery'}">
+          <ao:script>jQuery.noConflict();</ao:script>
+        </c:if>
+      </c:forEach>
+      <!-- Application-wide head includes -->
+      <c:forEach var="headInclude" items="${applicationScope.htmlRenderer.headIncludes}">
+        <ao:include page="${headInclude}" />
+      </c:forEach>
+      <ao:include page="update-nav.inc.jspx" arg.page="${page}" />
+      <c:if test="${!core:getViewAllowRobots(view, page)}">
+        <ao:meta name="robots" content="noindex, nofollow" />
+      </c:if>
+      <core:doComponents view="${view}" page="${page}" position="HEAD_END" reverse="true" />
+    </head>
+    <body>
+      <core:doComponents view="${view}" page="${page}" position="BODY_START" />
+      <div id="semanticcms-theme-documentation-page-container">
+        <ao:include
+          page="page-top-area.inc.jspx"
+          arg.book="${pageRef.book}"
+          arg.path="${pageRef.path}"
+          arg.view="${view.isDefault() ? pageRef.path : pageRef.path.concat('?view=').concat(ao:encodeURIComponent(view.name))}"
+          arg.page="${page}"
+          arg.active="${view.name}"
+        />
+        <main>
+          <ao:include page="/semanticcms-pagegraph/pagegraph.inc.jsp" arg.page="${page}" arg.view="${view}" />
+          <core:doView view="${view}" page="${page}" />
+          <div id="semanticcms-theme-documentation-page-pad-bottom"><!-- Avoid self-closing tag in jspx --></div>
+        </main>
+      </div>
+      <core:doComponents view="${view}" page="${page}" position="BODY_END" reverse="true" />
+    </body>
+  </ao:html>
 </jsp:root>
