--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/404.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/404.inc.jspx
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2015, 2016, 2018, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2015, 2016, 2018, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -20,15 +19,12 @@ GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
 along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/licenses/>.
--->
-<jsp:root
+--><jsp:root
   xmlns:ao="https://oss.aoapps.com/taglib/"
   xmlns:jsp="http://java.sun.com/JSP/Page"
   version="2.1"
->
-  <jsp:directive.page language="java" pageEncoding="UTF-8" />
-  <jsp:directive.page session="false" />
-  <jsp:directive.page isErrorPage="true" />
-
-  <ao:forward page="/semanticcms-theme-documentation/error.inc.jspx" arg.code="404" arg.message="404 Not Found" />
-</jsp:root>
+  ><jsp:directive.page language="java" pageEncoding="UTF-8"
+  /><jsp:directive.page session="false"
+  /><jsp:directive.page isErrorPage="true"
+  /><ao:forward page="/semanticcms-theme-documentation/error.inc.jspx" arg.code="404" arg.message="404 Not Found"
+/></jsp:root>
