--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-31T02:51:43-05:00"
-    dateModified="2023-02-03T20:57:28-06:00"
+    dateModified="2023-02-03T23:34:53-06:00"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -51,7 +51,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         <ul>
           <li>
             To avoid triggering additional errors within the error handlers, no longer attempt to write any output when the
-            <ao:a rel="nofollow" href="@{javadoc.link.javaee}javax/servlet/ServletResponse.html#isCommitted()">response has already been committed</ao:a>.
+            <ao:a rel="nofollow" href="@{javadoc.link.javaee}javax/servlet/ServletResponse.html#isCommitted--">response has already been committed</ao:a>.
           </li>
         </ul>
       </changelog:release>
