--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -39,7 +39,12 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     datePublished="2016-10-31T02:51:43-05:00"
     dateModified="2023-02-26T14:03:56Z"
   >
-    <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
+    <c:set var="latestRelease" value="1.12.3" />
+    <c:if test="${
+      fn:endsWith('@{project.version}', '-SNAPSHOT')
+      and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')
+      and '@{project.version}' != (latestRelease.concat('-SNAPSHOT'))
+    }">
       <changelog:release
         projectName="@{documented.name}"
         version="@{project.version}"
