--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-31T02:51:43-05:00"
-    dateModified="2023-02-26T14:03:56Z"
+    dateModified="2023-09-26T19:00:16Z"
   >
     <c:set var="latestRelease" value="1.12.3" />
     <c:if test="${
@@ -52,7 +52,11 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      />
+      >
+        <ul>
+          <li>Added script support for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.</li>
+        </ul>
+      </changelog:release>
     </c:if>
 
     <changelog:release
