--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -45,6 +45,8 @@ Arguments:
   <c:set var="book" value="${pageRef.book}" />
   <c:set var="servletPath" value="${pageRef.servletPath}" />
   <ao:html doctype="HTML5">
+    <!-- Scripts and styles activated by this page -->
+    <c:set var="wrActivate" value="semanticcms-theme-documentation-style/navigation, semanticcms-theme-documentation/yui-2.9.0" />
     <head>
       <c:choose>
         <c:when test="${encoding:getDoctype() == 'HTML5'}">
@@ -56,6 +58,7 @@ Arguments:
           <ao:meta httpEquiv="content-script-type" content="text/javascript" />
         </c:otherwise>
       </c:choose>
+      <wr:renderScripts position="HEAD_START" activate="${wrActivate}" />
       <!-- Mobile support -->
       <ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <!-- Authors -->
@@ -63,8 +66,7 @@ Arguments:
       <ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
       <title>Navigation - <ao:out value="${book.title}" /></title>
       <!-- TODO: Review HTML 4/HTML 5 differences from here -->
-      <!-- ao-web-resources -->
-      <wr:renderStyles activate="semanticcms-theme-documentation-style/navigation semanticcms-theme-documentation/yui-2.9.0" />
+      <wr:renderStyles activate="${wrActivate}" />
       <!-- TODO:
         Move yui activate to the head.inc.jspx
         Along with defining the group via JSP?
@@ -79,8 +81,10 @@ Arguments:
       <ao:script>jQuery.noConflict();</ao:script>
       <!-- No search index left navigation frame -->
       <ao:meta name="robots" content="noindex, nofollow" />
+      <wr:renderScripts position="HEAD_END" activate="${wrActivate}" />
     </head>
     <body class="yui-skin-sam">
+      <wr:renderScripts position="BODY_START" activate="${wrActivate}" />
       <main>
         <div id="semanticcms-theme-documentation-navigation-logo">
           <ao:a target="contentFrame" href="${servletPath}" param.view="what-to-do"><ao:img src="${book.pathPrefix}${book.param.logoSrc}" width="${book.param.logoWidth}" height="${book.param.logoHeight}" alt="${book.param.logoAlt}" /></ao:a>
@@ -139,6 +143,7 @@ Arguments:
           semanticcms_theme_documentation_navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
         });
       </ao:script>
+      <wr:renderScripts position="BODY_END" activate="${wrActivate}" />
     </body>
   </ao:html>
 </jsp:root>
