--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -45,6 +45,8 @@ Arguments:
 
   <!-- Display the current view and page -->
   <ao:html>
+    <!-- Scripts and styles activated by this page -->
+    <c:set var="wrActivate" value="ao-style, semanticcms-theme-documentation-style" />
     <c:set var="view" value="${arg.view}" />
     <c:set var="pageRef" value="${page.pageRef}" />
     <head>
@@ -58,6 +60,7 @@ Arguments:
           <ao:meta httpEquiv="content-script-type" content="text/javascript" />
         </c:otherwise>
       </c:choose>
+      <wr:renderScripts position="HEAD_START" activate="${wrActivate}" />
       <core:doComponents view="${view}" page="${page}" position="HEAD_START" />
       <!-- Mobile support -->
       <ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -75,7 +78,7 @@ Arguments:
       </c:if>
       <!-- TODO: Review HTML 4/HTML 5 differences from here -->
       <!-- ao-web-resources -->
-      <wr:renderStyles activate="ao-style, semanticcms-theme-documentation-style" />
+      <wr:renderStyles activate="${wrActivate}" />
       <!-- Per-view links -->
       <c:forEach var="link" items="${core:getViewLinks(view, page)}">
         <ao:link link="${link}" />
@@ -97,8 +100,10 @@ Arguments:
         <ao:meta name="robots" content="noindex, nofollow" />
       </c:if>
       <core:doComponents view="${view}" page="${page}" position="HEAD_END" reverse="true" />
+      <wr:renderScripts position="HEAD_END" activate="${wrActivate}" />
     </head>
     <body>
+      <wr:renderScripts position="BODY_START" activate="${wrActivate}" />
       <core:doComponents view="${view}" page="${page}" position="BODY_START" />
       <div id="semanticcms-theme-documentation-page-container">
         <ao:include
@@ -116,6 +121,7 @@ Arguments:
         </main>
       </div>
       <core:doComponents view="${view}" page="${page}" position="BODY_END" reverse="true" />
+      <wr:renderScripts position="BODY_END" activate="${wrActivate}" />
     </body>
   </ao:html>
 </jsp:root>
