--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-31T02:51:43-05:00"
-    dateModified="2023-09-26T19:00:16Z"
+    dateModified="2023-10-03T17:58:59Z"
   >
     <c:set var="latestRelease" value="1.12.3" />
     <c:if test="${
@@ -55,6 +55,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
       >
         <ul>
           <li>Added script support for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.</li>
+          <li>Removed dependency on jQuery to improve mobile browser response.</li>
         </ul>
       </changelog:release>
     </c:if>
