--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -40,29 +40,39 @@ Arguments:
   <!-- TODO: Rename "semanticcms-theme.skipFocus"? -->
   <c:if test="${!core:isExporting() || requestScope['template.skipFocus'] != true}">
     <ao:script>
-      jQuery(function() {
-        <!-- Scripting not allowed between pages when static files loaded from filesystem -->
-        <c:if test="${!core:isExporting()}">
-          if(window.parent !== window) {
-            var frames = window.parent.frames;
-            if(frames.length == 2 &amp;&amp; frames[1] == window) {
-              var navigation = frames[0].semanticcms_theme_documentation_navigation;
-              if(navigation !== undefined) {
-                navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
+      (function() {
+        // See https://youmightnotneedjquery.com/#ready
+        function ready(fn) {
+          if (document.readyState !== 'loading') {
+            fn();
+          } else {
+            document.addEventListener('DOMContentLoaded', fn);
+          }
+        }
+        ready(function() {
+          <!-- Scripting not allowed between pages when static files loaded from filesystem -->
+          <c:if test="${!core:isExporting()}">
+            if(window.parent !== window) {
+              var frames = window.parent.frames;
+              if(frames.length == 2 &amp;&amp; frames[1] == window) {
+                var navigation = frames[0].semanticcms_theme_documentation_navigation;
+                if(navigation !== undefined) {
+                  navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
+                }
               }
             }
-          }
-        </c:if>
-        <c:if test="${requestScope['template.skipFocus'] != true}">
-          setTimeout(
-            function() {
-              var main = document.getElementsByTagName("main")[0];
-              if(main) main.focus();
-            },
-            0
-          );
-        </c:if>
-      });
+          </c:if>
+          <c:if test="${requestScope['template.skipFocus'] != true}">
+            setTimeout(
+              function() {
+                var main = document.getElementsByTagName("main")[0];
+                if(main) main.focus();
+              },
+              0
+            );
+          </c:if>
+        });
+      })();
     </ao:script>
   </c:if>
 </jsp:root>
